--- a/weasel.yaml
+++ b/weasel.yaml
@@ -2,15 +2,17 @@
 # encoding: utf-8
 # 修改自: https://github.com/rime/weasel/blob/master/output/data/weasel.yaml
 #
-# COMMIT SHA: fda8a105c2166860064562c33eea562a7c811022
+# COMMIT SHA: 7016a340fdc06b291ed8ca074924eea8c07679b8
 
-config_version: "2024-02-17"
+config_version: "2024-04-26"
 
 app_options:
   cmd.exe:
     ascii_mode: true
   conhost.exe:
     ascii_mode: true
+  firefox.exe:
+    inline_preedit: true # 解决 Firefox 无法输入的问题 https://github.com/rime/weasel/issues/946
 
 show_notifications: true
 # 通知显示多长时间
@@ -46,7 +48,7 @@ style:
   fullscreen: false # 演示模式（全屏的輸入窗口）
 
   click_to_capture: false # 点击输入法时捕获截图到剪贴板
-  mouse_hover_ms: 0 # 鼠标悬停选词响应时间，若设置过低，鼠标在候选框上时会影响选词，值为 0 或将这行注释禁用此功能
+  hover_type: hilite # 鼠标悬停行为 none(无动作); hilite(选中鼠标下的候选); semi_hilite(高亮鼠标下的候选)
   paging_on_scroll: false # 鼠标滚轮翻页候选栏
 
   inline_preedit: true # 在光标位置显示预编辑文本
@@ -66,6 +68,9 @@ style:
   vertical_text: false # 垂直文本显示
   vertical_text_left_to_right: false # 垂直文本从左到右显示
   vertical_text_with_wrap: false # 垂直文本自动换行
+
+  layout/baseline: 0 # 基线高度百分比，0 即为禁用
+  layout/linespacing: 0 # 行高百分比，0 即为禁用，该项大于 100 可解决因字体导致的候选栏高度闪烁问题（需要同时设置基线高度 baseline）
 
 preset_color_schemes:
   ayaya:
