--- a/weasel.yaml
+++ b/weasel.yaml
@@ -4,7 +4,7 @@
 #
 # COMMIT SHA: 7016a340fdc06b291ed8ca074924eea8c07679b8
 
-config_version: "2024-04-26"
+config_version: "2024-06-08"
 
 app_options:
   cmd.exe:
@@ -29,16 +29,16 @@ style:
 
   # Windows 11 风格预设
   # 感谢 luminosara https://github.com/LufsX/rime/pull/22、https://github.com/LufsX/rime/pull/26
-  __include: "win11_preset"
+  __include: win11_preset
 
   # Windows 10 MDL2 风格预设
   # 此项风格建议使用 win10_MDL 为前缀的主题方案
   # 感谢 fbewivpjsbsby https://github.com/LufsX/rime/discussions/29
-  # __include: "win10_MDL_preset"
+  # __include: win10_MDL_preset
 
   # Windows 10 风格预设
   # 感谢 luminosara https://github.com/LufsX/rime/pull/22、https://github.com/LufsX/rime/pull/26
-  # __include: "win10_preset"
+  # __include: win10_preset
 
   # 以下是其它的设置
 
@@ -304,45 +304,45 @@ win11_preset:
   layout:
     align_type: center # 布局对齐方式
     max_width: 0 # 最大宽度限制
-    min_width: 160 # 最小宽度限制
+    min_width: 80 # 最小宽度限制
     min_height: 0 # 最小高度限制
     max_height: 0 # 最大高度限制
     border_width: 1 # 窗口边框宽度
-    margin_x: 16 # 窗口左右边距
-    margin_y: 14 # 窗口上下边距
-    spacing: 18 # 候选栏间距
-    hilite_spacing: 14 # 高亮显示间距
-    shadow_offset_x: 6 # 阴影 X 轴偏移
+    margin_x: 6 # 窗口左右边距
+    margin_y: 6 # 窗口上下边距
+    spacing: 10 # 候选栏间距
+    hilite_spacing: 10 # 高亮显示间距
+    shadow_offset_x: 3 # 阴影 X 轴偏移
 
-    candidate_spacing: 25 # 候选栏内部间距
-    corner_radius: 12 # 候选圆角半径
+    candidate_spacing: 10 # 候选栏内部间距
+    corner_radius: 5 # 候选圆角半径
     hilite_padding: 5 # 高亮高度
-    hilite_padding_x: 7 # 高亮 X 横向方向边距
-    hilite_padding_y: 6 # 高亮 Y 纵向方向边距
-    round_corner: 12 # 高亮圆角
-    shadow_offset_y: 6 # 阴影 Y 轴偏移
-    shadow_radius: 13 # 阴影半径
+    hilite_padding_x: 2 # 高亮 X 横向方向边距
+    hilite_padding_y: 2 # 高亮 Y 纵向方向边距
+    round_corner: 5 # 高亮圆角
+    shadow_offset_y: 0 # 阴影 Y 轴偏移
+    shadow_radius: 0 # 阴影半径
 
 win10_preset:
   label_format: "%s" # 候选栏标签格式
   layout:
     align_type: center # 布局对齐方式
     max_width: 0 # 最大宽度限制
-    min_width: 160 # 最小宽度限制
+    min_width: 90 # 最小宽度限制
     min_height: 0 # 最小高度限制
     max_height: 0 # 最大高度限制
     border_width: 2 # 窗口边框宽度
-    margin_x: 17 # 窗口左右边距
-    margin_y: 17 # 窗口上下边距
+    margin_x: 7 # 窗口左右边距
+    margin_y: 7 # 窗口上下边距
     spacing: 10 # 候选栏间距
-    hilite_spacing: 17 # 高亮显示间距
-    shadow_offset_x: 5 # 阴影 X 轴偏移
+    hilite_spacing: 10 # 高亮显示间距
+    shadow_offset_x: 7 # 阴影 X 轴偏移
 
-    candidate_spacing: 50 # 候选栏内部间距
+    candidate_spacing: 10 # 候选栏内部间距
     corner_radius: 10 # 候选条圆角，不需要圆角设置为 0
-    hilite_padding: 18 # 高亮高度
-    hilite_padding_x: 18 # 高亮 x 横向方向边距，可以自行调整
-    hilite_padding_y: 18 # 高亮 y 纵向方向边距
+    hilite_padding: 8 # 高亮高度
+    hilite_padding_x: 8 # 高亮 x 横向方向边距，可以自行调整
+    hilite_padding_y: 8 # 高亮 y 纵向方向边距
     round_corner: 0 # 高亮圆角，小狼毫天圆地方此项可设置为 0，也可自行调整
     shadow_offset_y: 4 # 阴影 Y 轴偏移
     shadow_radius: 10 # 阴影半径
@@ -353,12 +353,12 @@ win10_MDL_preset:
   label_font_point: 9
   layout:
     border_width: 1
-    margin_x: 15
+    margin_x: 7
     margin_y: 2
     spacing: 10
-    candidate_spacing: 30
+    candidate_spacing: 20
     corner_radius: 0
     round_corner: 0
     hilite_spacing: 5
-    hilite_padding_x: 27
-    hilite_padding_y: 15
+    hilite_padding_x: 15
+    hilite_padding_y: 6
