--- a/dicts/simp.dict.yaml
+++ b/dicts/simp.dict.yaml
@@ -34,7 +34,7 @@
 # 需要注音的字词设定在 others/script/rime/需要注音.txt
 ---
 name: 8105
-version: "2024-05-02"
+version: "2024-05-21"
 sort: by_weight
 ...
 ### 按需启用
@@ -46,7 +46,6 @@ sort: by_weight
 ### 扩展，不在《通用规范汉字表》的字:
 𰻝	biang	1
 𤭢	cei	1000
-𤭢了	cei le	1000
 诶	ei	1
 睆	huan	1
 菈	la	1
@@ -56,6 +55,7 @@ sort: by_weight
 螓	qin	1
 卻	que	1
 挼	rua	1
+牠	ta	1
 薙	ti	1
 凃	tu	1
 咲	xiao	1
@@ -1475,6 +1475,7 @@ sort: by_weight
 堆	dui	174996
 兑	dui	17197
 怼	dui	765
+㨃	dui	764
 碓	dui	382
 祋	dui	3
 顿	dun	557768
@@ -3096,12 +3097,12 @@ sort: by_weight
 䌹	jiong	0
 𬳶	jiong	0
 就	jiu	11305679
-酒	jiu	862253
-久	jiu	737479
-九	jiu	506014
-究	jiu	429844
+九	jiu	862253
+酒	jiu	737479
+久	jiu	506014
+旧	jiu	429844
 救	jiu	427315
-旧	jiu	275220
+究	jiu	275220
 舅	jiu	73540
 纠	jiu	69730
 疚	jiu	37765
@@ -6645,6 +6646,7 @@ sort: by_weight
 峿	wu	0
 珸	wu	0
 𣲘	wu	0
+洗	xi	2290306
 西	xi	1778761
 喜	xi	1069981
 系	xi	942245
@@ -6654,7 +6656,6 @@ sort: by_weight
 习	xi	487160
 吸	xi	431549
 戏	xi	347524
-洗	xi	290306
 惜	xi	271651
 席	xi	208395
 袭	xi	189129
@@ -7296,11 +7297,11 @@ sort: by_weight
 𫄧	yan	0
 𬙂	yan	0
 𬸘	yan	0
-样	yang	4769842
+养	yang	1019753
+样	yang	969842
 阳	yang	850226
 杨	yang	633480
 扬	yang	383219
-养	yang	319753
 洋	yang	293496
 仰	yang	159568
 央	yang	146296
