--- a/extended.dict.yaml
+++ b/extended.dict.yaml
@@ -21,11 +21,10 @@ import_tables:
   - dicts/sogou_net # 网络流行语
 
   # 一点点小小的私货，不需要的可以自行关闭~
-  - dicts/sogou_genshin # 原神
-  - dicts/sogou_minecraft # Minecraft 词条
-  - dicts/sogou_touhou # 东方 Project
   - dicts/moegirl # 萌娘百科
+  - dicts/sogou_touhou # 东方 Project
+  - dicts/sogou_minecraft # Minecraft 词条
 
-  # emoji 中的词库
+  # emoji 补全词库
   - dicts/emoji
 ...
